fixed the overflow bug in 'Separator'

--- a/src/Components/HomeHeader/HomeHeader.module.css
+++ b/src/Components/HomeHeader/HomeHeader.module.css
@@ -5,6 +5,7 @@
     grid-template-rows: 1fr 1fr;
     grid-gap: 10px;
     height: 50%;
+    margin-bottom: 50px;
 }
 
 .headerImages p{
